apps/seafile/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile
  namespace: seafile
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seafile.${BASE_DOMAIN:=libre.pod}`)
      services:
        - name: seafile
          port: 80
